<resources>
    <string name="app_name">Catch</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_fragment_label">Menu</string>
    <string name="create_game_fragment_label">Create Game</string>
    <string name="start_game_fragment_label">Start Game</string>
    <string name="join_game_fragment_label">Join Game</string>
    <string name="await_start_fragment_label">Await Start</string>
    <string name="game_id">Game ID:</string>
    <string name="example_game_id">123 456</string>
    <string name="start_game">Start Game</string>
    <string name="start_new_game">Start new Game</string>
    <string name="join_game">Join Game</string>
    <string name="game_length_prompt">Select Game Length:</string>
    <string name="create_game">Create Game</string>
    <string name="wait_heading">Joined game: </string>
    <string name="wait_msg">Waiting for host to start the game</string>
    <string name="leave_game">Leave Game</string>
    <string name="game_id_prompt">Game ID:</string>
    <string name="user_id_prompt">Username:</string>
    <string name="password_prompt">Password:</string>
    <string name="submit">submit</string>
    <string name="hint_user_id">\@Alan_Turing</string>
    <string name="finish">Finish</string>
    <string name="result">Result:</string>
    <string name="result_msg">Game result!</string>
    <string name="win_msg">Catchers Won!</string>
    <string name="lose_msg">Catchers Lost!</string>
    <string name="time_left">Time left:</string>
    <string name="time_mock">0:00:00</string>
    <string name="catches">Catches:</string>
    <string name="game_fragment_label">Game</string>
    <string name="catch_player_fragment_label">Catch Player</string>
    <string name="result_fragment_label">Result</string>
    <string name="login_fragment_label">Login</string>
    <string name="users">Users:</string>
    <string name="menu">Menu</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="backToLogin">Back to Login</string>
    <string name="logOut">Log out</string>
    <string name="kickPlayer">Kick</string>
</resources>