<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainMenuFragment">

    <fragment
        android:id="@+id/MainMenuFragment"
        android:name="com.macc.catchgame.view.MainMenuFragment"
        android:label="@string/main_menu_fragment_label"
        tools:layout="@layout/fragment_main_menu">

        <action
            android:id="@+id/action_MainMenuFragment_to_StartGameFragment"
            app:destination="@id/CreateGameFragment" />
        <action
            android:id="@+id/action_MainMenuFragment_to_JoinGameFragment"
            app:destination="@id/JoinGameFragment" />
    </fragment>

    <fragment
        android:id="@+id/CreateGameFragment"
        android:name="com.macc.catchgame.view.CreateGameFragment"
        android:label="@string/create_game_fragment_label"
        tools:layout="@layout/fragment_create_game">

        <action
            android:id="@+id/action_CreateGameFragment_to_StartGameFragment"
            app:destination="@id/StartGameFragment" />
    </fragment>

    <fragment
        android:id="@+id/StartGameFragment"
        android:name="com.macc.catchgame.view.StartGameFragment"
        android:label="@string/start_game_fragment_label"
        tools:layout="@layout/fragment_start_game">
    </fragment>

    <fragment
        android:id="@+id/JoinGameFragment"
        android:name="com.macc.catchgame.view.JoinGameFragment"
        android:label="@string/join_game_fragment_label"
        tools:layout="@layout/fragment_join_game">

        <action
            android:id="@+id/action_JoinGameFragment_to_AwaitStartFragment"
            app:destination="@id/AwaitStartFragment" />
    </fragment>

    <fragment
        android:id="@+id/AwaitStartFragment"
        android:name="com.macc.catchgame.view.AwaitStartFragment"
        android:label="@string/await_start_fragment_label"
        tools:layout="@layout/fragment_await_start">

        <action
            android:id="@+id/action_AwaitStartFragment_to_MainMenuFragment"
            app:destination="@id/MainMenuFragment" />
    </fragment>
</navigation>