<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".view.MainMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="96dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:textSize="32dp"
            android:text="@string/menu" />

        <Button
            android:id="@+id/buttonCreateGame"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/start_new_game" />

        <Button
            android:id="@+id/buttonJoinGame"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/join_game" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>